inital work on paramterizing README files